# forum_rs

./: .gitignore  README.md  schema.dbm
backend/: .env  Cargo.toml  app.toml  schema.sql
backend/src/: config.rs  error.rs  main.rs  middleware.rs  models.rs
backend/src/db/: forum.rs  mod.rs  user.rs
backend/src/dto/: forum.rs  mod.rs  user.rs
backend/src/handler/: auth.rs  forum.rs  mod.rs  user.rs
backend/src/mail/: mails.rs  sendmail.rs
backend/src/utils/: mod.rs  password.rs  token.rs
