[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.97"
argon2 = { version = "0.5.3", features = ["std"] }
async-trait = "0.1.87"
axum = "0.8.1"
axum-extra = { version = "0.10.0", features = ["cookie"] }
axum-server = { version = "0.7.1", features = ["tls-rustls"] }
chrono = { version = "0.4.40", features = ["serde"] }
http = "1.3.1"
jsonwebtoken = "9.3.1"
password-hash = "0.5.0"
rand_core = { version = "0.9.3", features = ["std"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sqlx = { version = "0.8.3", features = ["postgres","runtime-tokio","uuid","chrono"] }
tokio = { version = "1.44.1", features = ["full"] }
toml = "0.8.20"
tower-http = { version = "0.6.2", features = ["cors", "trace"] }
uuid = { version = "1.15.1", features = ["serde", "v4"] }
validator = { version = "0.20.0", features = ["derive"] }
tracing-subscriber = "0.3.*"
dotenv = "0.15.0"
lettre = "0.11.15"
time = "0.3.20"
ammonia = "4.0.0"
maplit = "1.0.2"
